--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,15 @@
+REQUISITOS PROYECTO
+- CSS responsivo (p. ej. cambio de layout según tamaño de pantalla)
+- JS: 
+	- 5 métodos de acceso al DOM
+	- 3 triggers a eventos
+	- Uso de objetos jQuery
+	- Uso de JES6
+	- Uso de expresiones regulares
+	- Carga de XML y JSON (de 2 de estas formas: Objeto XMLHttpRequest, JQuery, API Fetch) usando un servidor HTTP
+
+------------------------------
+IDEAS PARA HACER
 - estilo CSS pagina principal
 
 - top sitios en pagina principal
@@ -20,3 +32,4 @@
 
 -ideas para mejorar página:
 	-Navegación con paradas hace que baje en la página a la parada clicada
+	
