TODO.txt actualizado

--- a/todo.txt
+++ b/todo.txt
@@ -35,6 +35,19 @@ IDEAS PARA HACER
 -ideas para mejorar página:
 	-Navegación con paradas hace que baje en la página a la parada clicada
 	
-- pequeños errores:
-  - modo oscuro ya no funciona en Santiago.html
-  - botones de barra navegación desaparecen al achicar la pantalla
+
+------------------------------
+DOCUMENTACIÓN:
+
+- Inventario de contenido
+- Arquitectura de la información
+
+- Prototipo manual (sketching)
+- Esqueleto (wireframe)
+- Diseño final (mockup)
+
+- Casos de uso
+- Mapa de navegación (web)
+- Story board (casos de uso + navegación, en pasos)
+
+- Estructura de ficheros
